--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "ts-node node_modules/typeorm/cli.js migration:generate -d src/common/providers/db.provider.module.ts -o src/common/migrations/migration",
-    "migration:run": "ts-node node_modules/typeorm/cli.js migration:run  -d src/common/providers/db.provider.module.ts",
+    "migration:run": "ts-node node_modules/typeorm/cli.js migration:run  -d dist/common/providers/db.provider.module.js",
     "migration:fake-run": "ts-node node_modules/typeorm/cli.js migration:run --fake -d src/common/providers/db.provider.module.ts",
     "migration:revert": "ts-node node_modules/typeorm/cli.js migration:revert  -d src/common/providers/db.provider.module.ts"
   },
@@ -31,17 +31,22 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csv-parser": "^3.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.19"
+    "typeorm": "^0.3.19",
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^10.3.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
